# magrip

./: PLAN.md  README.md  pyproject.toml  requirements.txt
configs/experiments/: README.md  m6_train_gemma-2b-it_wikitext2_r060_full_v1.json  m6_train_gemma-2b_wikitext2_r060_full_v3.json  m6_train_gpt2-xl_wikitext2_r060_tuned_v1.json  m6_train_gpt2_wikitext2_r070_smoke_v1.json  m6_train_qwen3-8b_wikitext2_r060_full_v1.json  m7_compact_gemma-2b-it_wikitext2_r060_full_v1.json  m7_compact_gemma-2b_wikitext2_r060_full_v3.json
docs/: APOLLO_INTEGRATION.md  COMPLETED_ROADMAP.md  EXPERIMENTS.md  FFN_DISCOVERY.md  MASK_SYSTEM.md  SALIENCY_SYSTEM.md  THEORY.tex  TRAINING_LOOP.md  V1_BASELINE.md
magrip/: __init__.py  baseline.py  compaction.py  config.py  data.py  discovery.py  evaluation.py  experiment.py  logging.py  masks.py  module_utils.py  objectives.py  optim.py  saliency.py  tokenizer_assets.py  topology.py  topology_registry.py  trainer.py  validation.py
scripts/: compact_model.py  inspect_mask_state.py  inspect_model.py  plot_magrip_run.py  run_experiment_config.py  run_gpt2_smoke.py  run_magrip_smoke.py  run_magrip_train.py  validate_smoke_artifact.py
tests/: test_compaction.py  test_discovery.py  test_masks.py  test_objectives.py  test_optim.py  test_saliency.py  test_trainer.py  test_validation.py
