[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "magrip"
version = "0.0.0"
description = "Magnitude and Gradient Informed Pruning framework for large language models."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "transformers",
  "datasets",
  "tqdm",
  "numpy",
  "accelerate",
  "matplotlib",
  "apollo-torch",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
include = ["magrip*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
